--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,7 @@
-<h1>Create a Room</h1>
-<input matInput [(ngModel)]="roomName" placeholder="Room Name">
-<button mat-raised-button color="primary" (click)="createRoom()">Create Room</button>
+<div class="container">
+    <h1>Create a Room</h1>
+    <div class="create-room">
+        <input matInput [(ngModel)]="roomName" placeholder="Room Name">
+        <button mat-raised-button color="primary" (click)="createRoom()">Create Room</button>
+    </div>
+</div>
