--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,3 +2,4 @@
 
 $primary-palette: mat-palette($mat-indigo);
 $primary: mat-color($primary-palette, 500);
+$primary-light: mat-color($primary-palette, 200);
