--- a/src/app/room/room.component.scss
+++ b/src/app/room/room.component.scss
@@ -4,9 +4,30 @@ h1 {
     text-align: center;
 }
 
+.container {
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+}
+
 .cards {
     display: flex;
     justify-content: center;
+    text-align: center;
+    margin: 5px;
+    gap: 10px;
+}
+
+.action-buttons {
+    display: flex;
+    gap: 10px;
+}
+
+.score {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     margin: 5px;
     gap: 10px;
