--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,12 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+#header {
+    height: 64px;
+}
+
 .container {
+    box-sizing: border-box;
+    min-height: calc(100vh - 64px);
     padding: 10px;
 }
